@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20001226
+MANIFEST for cm_tools, version t20001228
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
